added new NLP questions

--- a/Questions/questions.tex
+++ b/Questions/questions.tex
@@ -11,5 +11,13 @@
 	\item What is regular grammar? Does this differ in power to a regular expression and if so, in what way?
 	\item How would you build a POS tagger from scratch given a corpus of annotated sentences? How would you deal with unknown words?
 	\item How would you find all the occurrences of quoted text in a news article? 
+	\item How would you build a system to translate English text to Greek and vice-versa?
+	\item How would you build a system that automatically groups news articles by subject?
+	\item What are stop words? Describe an application in which stop words should be removed.
+	\item How would you design a model to predict whether a movie review was positive or negative?
+	\item What is entropy? How would you estimate the entropy of the English language?
+	\item What is the TF-IDF score of a word and in what context is this useful?
+	\item How does the PageRank algorithm work?
+	\item What is dependency parsing?
 \end{itemize}
 \end{document}
