added NLP questions

--- a/Questions/questions.tex
+++ b/Questions/questions.tex
@@ -19,5 +19,10 @@
 	\item What is the TF-IDF score of a word and in what context is this useful?
 	\item How does the PageRank algorithm work?
 	\item What is dependency parsing?
+	\item What are the difficulties in building and using an annotated corpus of text such as the Brown Corpus and what can be done to mitigate them?
+	\item Are you familiar with WordNet or other related linguistic resources?
+	\item Do you have any experience in building ontologies?
+	\item Do you speak any foreign languages?
+	\item What tools for training NLP models (nltk, Apache OpenNLP, GATE, MALLET etc.,) have you used?
 \end{itemize}
 \end{document}
