added ML questions

--- a/Questions/questions.tex
+++ b/Questions/questions.tex
@@ -24,5 +24,15 @@
 	\item Do you have any experience in building ontologies?
 	\item Do you speak any foreign languages?
 	\item What tools for training NLP models (nltk, Apache OpenNLP, GATE, MALLET etc.,) have you used?
+	\item Describe approaches to data mining of customer logs.
+	\item What is feature extraction and how would you perform it?
+	\item How would you handle dirty data?
+	\item How do you build a system similar to Netflix?
+	\item How do you implement convolutional neural networks?
+	\item Provide details about LDA and Gibbs Sampling?
+	\item What do you mean by Rejection Sampling?
+	\item Describe a Random Forest.
+	\item Why does one use MSE as a measure of quality. What is the scientific/mathematical reason for the same?
+	\item Given an objective function, calculate the range of its learning rate?
 \end{itemize}
 \end{document}
