added new ML questions

--- a/Questions/questions.tex
+++ b/Questions/questions.tex
@@ -41,5 +41,9 @@
 	\item Do you have experience with Spark ML or another platform for building machine learning models using very large datasets?
 	\item What tools and environments have you used to train and assess models?
 	\item What are some good ways for performing feature selection that do not involve exhaustive search? 
+	\item On what type of ensemble technique is a random forest based? What particular limitation does it try to address?
+	\item What is a probabilistic graphic model? What is the difference between Markov networks and Bayesian networks?
+	\item What is the EM algorithm? Give a couple of applications
+	\item What methods for dimensionality reduction do you know and how do they compare with each other?
 \end{itemize}
 \end{document}
