added new NLP questions

--- a/Questions/questions.tex
+++ b/Questions/questions.tex
@@ -45,5 +45,12 @@
 	\item What is a probabilistic graphic model? What is the difference between Markov networks and Bayesian networks?
 	\item What is the EM algorithm? Give a couple of applications
 	\item What methods for dimensionality reduction do you know and how do they compare with each other?
+	\item Explain NLP to a non-technical person.
+	\item What's the use of NLP in machine learning?
+	\item Explain Vector Space Model and its use.
+	\item Explain cosine similarity in a simple way.
+	\item How unstructured text data can be converted into structured data for the purpose of ML models?
+	\item Why and when stop words are removed? In which situation we do not remove them?
+	\item Explain the distances and similarity measures that can be used to compare documents.
 \end{itemize}
 \end{document}
