--- a/Questions/questions.tex
+++ b/Questions/questions.tex
@@ -52,5 +52,6 @@
 	\item How unstructured text data can be converted into structured data for the purpose of ML models?
 	\item Why and when stop words are removed? In which situation we do not remove them?
 	\item Explain the distances and similarity measures that can be used to compare documents.
+	\item Explain Linear and Logistic Regression and in which scenarios you can use them?
 \end{itemize}
 \end{document}
