--- a/Questions/questions.tex
+++ b/Questions/questions.tex
@@ -53,5 +53,6 @@
 	\item Why and when stop words are removed? In which situation we do not remove them?
 	\item Explain the distances and similarity measures that can be used to compare documents.
 	\item Explain Linear and Logistic Regression and in which scenarios you can use them?
+	\item What is overfitting and what are its disadvantages?
 \end{itemize}
 \end{document}
